(library
 (name git_rev_parse))

(rule
 (target git_sha)
 (action
  (with-stdout-to
   %{target}
   (with-accepted-exit-codes
    (or 0 128)
    (run git rev-parse --short HEAD)))))

(rule
 (target git_rev_parse.ml)
 (deps git_sha)
 (action
  (with-stdout-to
   %{target}
   (progn
    (echo "let parsed_sha = String.trim \"")
    (cat git_sha)
    (echo "\"\n")))))
